[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radar-har"
version = "1.0.0"
description = "Deep CNN Autoencoder for Radar-Based Classification of Similar Aided vs. Unaided Human Activities"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Radar-HAR Contributors" }]
keywords = [
    "radar", "micro-doppler", "human-activity-recognition",
    "deep-learning", "autoencoder", "cnn", "attention",
    "explainable-ai", "fall-detection", "assistive-technology",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
